--- a/fans-alley/src/app/products/delete/delete.component.css
+++ b/fans-alley/src/app/products/delete/delete.component.css
@@ -1,3 +1,12 @@
+.outer {
+    max-width: 500px;
+    background-color: rgba(255, 255, 255, 0.7);
+    backdrop-filter: blur(10px);
+    -webkit-backdrop-filter: blur(10px);
+    padding: 25px;
+    margin: 0 auto;
+}
+
 .delete {
     display: flex;
     flex-direction: column;
@@ -6,11 +15,11 @@
     text-align: center;
     padding: 20px;
     margin: 0 auto;
-    max-width: 500px;
+    max-width: 400px;
     background-color: #fff5f5;
-    border: 25px solid #ffcccc;
+    border: 2px solid rgba(255, 204, 204);
     border-radius: 8px;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    box-shadow: 10px 5px 5px rgba(0, 0, 0, 0.3);
 }
 
 .delete img {
