Added more offers functionality
Now the users can make offers for the products.

--- a/fans-alley/src/app/products/product-item/product-item.component.css
+++ b/fans-alley/src/app/products/product-item/product-item.component.css
@@ -109,10 +109,16 @@ section.make-offer{
     transition: background-color 0.3s;
     width: 100%;
     text-align: center;
+    cursor: pointer;
 }
 
 .card a.offer-button:hover {
     background-color: #025aa5;
+}
+
+.card a.offer-button.disabled {
+        pointer-events: none;
+        opacity: 0.5;
 }
 
 .card a.buy-now-button {
