--- a/fans-alley/src/app/products/product-item/product-item.component.html
+++ b/fans-alley/src/app/products/product-item/product-item.component.html
@@ -18,9 +18,9 @@
     </section>
     <a [routerLink]="'/products/' + product._id + '/details'" class="more-info" *ngIf="!isOwner">More info about the product and the artist</a>
     <a [routerLink]="'/products/' + product._id + '/details'" class="more-info" *ngIf="isOwner">See OFFERS, EDIT or DELETE your product</a>
-    <input type="number" class="offer" [(ngModel)]="currentOffer" [min]="userOfferForThisProduct + 1" *ngIf="!product.sold && userService.isLoggedIn() && !isOwner">
+    <input type="number" class="offer" [(ngModel)]="currentOffer" [min]="userOfferForThisProduct + 1" [max]="product.buyPrice" *ngIf="!product.sold && userService.isLoggedIn() && !isOwner">
     <section class="make-offer" *ngIf="!product.sold && userService.isLoggedIn() && !isOwner">
-        <a href="#" class="offer-button" [innerHTML]="'Make offer for $' + currentOffer"></a>
-        <a href="#" class="buy-now-button">Buy NOW for ${{product.buyPrice}}</a>
+        <a (click)="offer()" class="offer-button" [innerHTML]="'Make offer for $' + currentOffer" [ngClass]="{'disabled': currentOffer === product.buyPrice}"></a>
+        <a class="buy-now-button">Buy NOW for ${{product.buyPrice}}</a>
     </section>
 </div>
