Added event emitter for the offers
Now the product-item components re-render on every change.

--- a/fans-alley/src/app/products/product-list/product-list.component.html
+++ b/fans-alley/src/app/products/product-list/product-list.component.html
@@ -1,5 +1,8 @@
 <section class="container products">
 <div *ngFor="let product of allProducts">
-    <app-product-item [product]="product"/>
+    <app-product-item 
+    [product]="product"
+    (offerAdded)="onOfferAdded()"
+    />
 </div>
 </section>
