Added a buy conformation component

--- a/fans-alley/src/app/products/edit/edit.component.html
+++ b/fans-alley/src/app/products/edit/edit.component.html
@@ -70,7 +70,7 @@
             <p *ngIf="!previewUrl">No image selected</p>
           </div>
 
-          <app-submit-btn [text]="'Create your product'" [disabled]="!form.valid"/>
+          <app-submit-btn [text]="'Edit your product'" [disabled]="!form.valid"/>
       
         </form>
       </section>
