--- a/fans-alley/src/app/products/details/details.component.html
+++ b/fans-alley/src/app/products/details/details.component.html
@@ -1,12 +1,12 @@
 <section class="product-info-page container">
     <div class="price-tag">${{product.buyPrice}}</div>
     <img src={{product.imageUrl}} alt="">
-        <input type="number" class="offer" value="4" *ngIf="!isOwner && isLoggedIn">
+        <input type="number" class="offer" value="4" [(ngModel)]="currentOffer" [min]="userOfferForThisProduct + 1" [max]="product.buyPrice" *ngIf="!product.sold && isLoggedIn && !isOwner">
     <section class="make-offer-on-page" *ngIf="!isOwner && isLoggedIn">
-        <a href="#" class="offer-button-on-page">Make offer for $4</a>
+        <a (click)="offer()" class="offer-button-on-page" [innerHTML]="'Make offer for $' + currentOffer" [ngClass]="{'disabled': currentOffer === product.buyPrice}">Make offer for $4</a>
         <a href="#" class="buy-now-button-on-page">Buy NOW for ${{product.buyPrice}}</a>
     </section>
-    <a href="#" class="more-from-this-artist-button">More from this atrist</a>
+    <a href="#" class="more-from-this-artist-button" *ngIf="!isOwner">More from this atrist</a>
     <p class="product-description">{{product.description}}</p>
     <a [routerLink]="'/products/' + product._id + '/edit'" class="edit-button" *ngIf="isOwner">Edit</a>
     <a [routerLink]="'/products/' + product._id + '/delete'" class="remove-button" *ngIf="isOwner">Delete</a>
