Show more info button on the home page
Added a button that will show more information of how to use the app.

--- a/fans-alley/src/app/home/home.component.css
+++ b/fans-alley/src/app/home/home.component.css
@@ -29,9 +29,13 @@
 }
 
 .pairs {
-    display: flex;
+    display: none;
     flex-direction: column;
     gap: 150px;
+}
+
+.pairs.show {
+    display: flex;
 }
 
 .pair {
@@ -48,4 +52,8 @@
     border: 3px solid cyan;
     transition: transform ease-in 0.3s;
     color: cyan;
+}
+
+button {
+    border: 2px solid red;
 }
