--- a/fans-alley/src/app/home/home.component.css
+++ b/fans-alley/src/app/home/home.component.css
@@ -1,3 +1,8 @@
+h2{
+    text-align: center;
+    margin-bottom: 10px;
+}
+
 .home-info {
     display: flex;
     flex-direction: column;
@@ -55,5 +60,27 @@
 }
 
 button {
-    border: 2px solid red;
+    width: 100%;
+    padding: 10px 0;
+    background-color: black;
+    border: 2px solid cyan;
+    color: cyan;
+    font-size: 16px;
+    cursor: pointer;
+    background-color: background-color 0.3s ease, color 0.3s ease, transform 0.2s ease;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+}
+
+button:hover {
+    background-color: cyan;
+    color: black;
+}
+
+button:active{
+    transform: scale(0.80);
+}
+
+button.show {
+    display: none;
 }
