--- a/fans-alley/src/app/home/home.component.html
+++ b/fans-alley/src/app/home/home.component.html
@@ -6,7 +6,7 @@
         <section class="top">
             <div class="tips">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur nobis voluptates mollitia laborum nostrum non cupiditate quia iure magnam numquam! Ab hic placeat tenetur voluptate vel aspernatur esse? Maxime, tenetur.</p>
-                <button (click)="showMore()">SHOW MORE</button>
+                <button [class.show]="isVisible" (click)="showMore()">Show more</button>
             </div>
         </section>
         <section class="next" [class.show]="isVisible">
